--- a/com.store.smhilaw1.MainActivity/bin/AndroidManifest.xml
+++ b/com.store.smhilaw1.MainActivity/bin/AndroidManifest.xml
@@ -37,6 +37,12 @@
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape" >
         </activity>
+        <activity
+            android:name="io.vov.vitamio.activity.InitActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
