--- a/com.store.smhilaw1.MainActivity/.settings/org.eclipse.core.resources.prefs
+++ b/com.store.smhilaw1.MainActivity/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Thu Mar 14 15:19:14 CST 2013
+#Thu Mar 21 09:42:35 CST 2013
 eclipse.preferences.version=1
 encoding//src/com/store/adapter/SoftwareListAdapter.java=UTF-8
 encoding//src/com/store/http/ApkLoadTask.java=gbk
@@ -9,4 +9,4 @@ encoding//src/com/store/http/TokenHttpsUtil.java=UTF-8
 encoding//src/com/store/smhilaw1/MainActivity.java=UTF-8
 encoding//src/com/store/suffix/CryptUtil.java=UTF-8
 encoding//src/com/store/suffix/StrBinaryTurn.java=UTF-8
-encoding/<project>=gbk
+encoding/<project>=UTF-8
