--- a/com.store.smhilaw1.MainActivity/bin/AndroidManifest.xml
+++ b/com.store.smhilaw1.MainActivity/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.store.smhilaw1"
     android:versionCode="2"
-    android:versionName="3.0" >
+    android:versionName="1.1.2" >
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="11" />
@@ -24,18 +24,23 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.store.smhilaw1.MainActivity"
+            android:name=".MainActivity1"
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.store.smhilaw1.PlayActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:screenOrientation="landscape" >
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
