--- a/com.store.smhilaw1.MainActivity/AndroidManifest.xml
+++ b/com.store.smhilaw1.MainActivity/AndroidManifest.xml
@@ -22,11 +22,16 @@
     <application 
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar"
+        >
         <activity
             android:name=".MainActivity1"
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape" >
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.store.smhilaw1.PlayActivity"
@@ -37,10 +42,7 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape" >
-             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
