--- a/com.store.smhilaw1.MainActivity/AndroidManifest.xml
+++ b/com.store.smhilaw1.MainActivity/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.store.smhilaw1"
     android:versionCode="2"
-    android:versionName="1.1.4" >
+    android:versionName="1.1.5" >
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="11" />
@@ -35,6 +35,11 @@
         </activity>
         <activity
             android:name="com.store.smhilaw1.PlayActivity"
+            android:label="@string/title_activity_main"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="com.wenchuang.music.play.Simplayer"
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape" >
         </activity>
