--- a/com.store.smhilaw1.MainActivity/project.properties
+++ b/com.store.smhilaw1.MainActivity/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-14
-android.library.reference.1=../../../../../Vitamio
+android.library.reference.1=../../../Desktop/切图/VitamioBundle
