--- a/com.store.smhilaw1.MainActivity/AndroidManifest.xml
+++ b/com.store.smhilaw1.MainActivity/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.store.smhilaw1"
     android:versionCode="2"
-    android:versionName="1.1.6" >
+    android:versionName="1.1.6。1" >
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="11" />
