修改播放器控制，可以使用非开源播放器。

--- a/com.store.smhilaw1.MainActivity/AndroidManifest.xml
+++ b/com.store.smhilaw1.MainActivity/AndroidManifest.xml
@@ -60,6 +60,11 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
         </activity>
+         <activity
+            android:name=".play.VitamioPlayer"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+        </activity>
     </application>
 
 </manifest>
